objects/Opportunity_Note__c.object
<CustomObject>
    <fields>
        <fullName>Call_Outcome__c</fullName>
        <label>Call Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Evaluation Scheduled (move to next stage)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interested (follow up)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Answer (follow up)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Currently Interested (follow up)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospective Buyer is Dealer (move to lost)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote Submitted to Seller (follow up)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seller Sold Car (move to lost)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seller Unqualified (move to lost)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seller Will Not Work With Shift (move to lost)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shift Sold Car (add to ProD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Drive Cancelled (follow up)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Drive Scheduled (move to next stage)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unreachable (move to lost)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunity Notes</relationshipLabel>
        <relationshipName>Opportunity_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Migration_Source_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Migration Source</label>
        <referenceTo>Migration_Source__c</referenceTo>
        <relationshipLabel>Opportunity Notes</relationshipLabel>
        <relationshipName>Opportunity_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migration_Tree_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Migration Tree ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Notes</relationshipLabel>
        <relationshipName>Opportunity_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pricing_Takeaway__c</fullName>
        <label>Pricing Takeaway</label>
        <picklist>
            <picklistValues>
                <fullName>Overpriced - Book Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overpriced - Color Not Accounted For</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overpriced - Evaluation Error (Cosmetic/Other Issue Not Accounted For)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overpriced - Expired Quote Not Updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overpriced - Human Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overpriced - Incorrect Pricing Calculation Used</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overpriced - Incorrect Vehicle Information Used</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overpriced - Make/Mileage Outside Retail Criteria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overpriced - Market Turned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overpriced - Merchandising Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overpriced - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overpriced - Poor Post Listing Price Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overpriced - Processing Error (Mechanical Failure)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overpriced - Unknown Reason</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overpriced - VHR Not Included</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underpriced - Condition Not Accounted For</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underpriced - Human Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underpriced - Incorrect Vehicle Information Used</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underpriced - MMR Adjustment Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underpriced - Odometer Adjustment Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underpriced - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underpriced - Rare Combination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underpriced - Unknown Reason</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Processing_Pipeline_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Processing Pipeline</label>
        <referenceTo>Processing_Pipeline__c</referenceTo>
        <relationshipLabel>Opportunity Notes</relationshipLabel>
        <relationshipName>Opportunity_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Opportunity Note</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Opportunity Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>